# ALP-CALCULUS-KELOMPOK-3

./: README.md  setup.py
ALP CALC/: numerik.py
ALP CALC/numerikpy/numerik/: README.md  __init__.py  pyproject.toml
ALP_CALC/: __init__.py
ALP_CALC.egg-info/: PKG-INFO
