[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "numerikpy"
version = "0.1.0"
description = "A simple numerical methods library for derivatives and integrals"
authors = [
  { name="Your Name", email="you@example.com" }
]
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}

[project.urls]
"Homepage" = "https://github.com/KeaneKen/ALP-CALCULUS-KELOMPOK-3"
